--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "blade-ui-kit/blade-heroicons": "^2.6",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.9",
+        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "laravolt/indonesia": "^0.36.0",
         "maatwebsite/excel": "^3.1",
