--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
+        "@types/leaflet": "^1.9.19",
+        "@types/leaflet.markercluster": "^1.5.5",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.21",
         "axios": "^1.7.4",
@@ -16,5 +18,10 @@
         "postcss": "^8.5.3",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.4",
+        "leaflet.heat": "^0.2.0",
+        "leaflet.markercluster": "^1.5.3"
     }
 }
